--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,10 +1,10 @@
 name: VillagerMarket
 main: bestem0r.villagermarket.VMPlugin
-version: 1.6.1
+version: 1.6.2
 description: A plugin made by Bestem0r to create Villager Shops
 api-version: 1.13
 depend: [Vault]
-softdepend: [Essentials, CMI, WorldEdit, WorldGuard, LibsDisguises]
+softdepend: [Essentials, CMI, WorldEdit, WorldGuard, LibsDisguises, EasyConomy]
 commands:
   vm:
     description: List all Villager Market commands
