--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,10 +1,10 @@
 name: VillagerMarket
 main: me.bestem0r.villagermarket.VMPlugin
-version: 1.8.2
+version: 1.8.3
 description: A plugin made by Bestem0r to create Villager Shops
 api-version: 1.13
 depend: [Vault]
-softdepend: [Essentials, CMI, WorldEdit, WorldGuard, LibsDisguises, EasyConomy]
+softdepend: [Essentials, CMI, WorldEdit, WorldGuard, LightEconomy, TheNewEconomy, HellConomy, EasyConomy]
 commands:
   vm:
     description: List all Villager Market commands
