--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>me.bestemor.villagermarket</groupId>
     <artifactId>VillagerMarket</artifactId>
-    <version>1.10.3-SNAPSHOT</version>
+    <version>1.10.4-SNAPSHOT</version>
 
     <repositories>
         <repository>
@@ -95,6 +95,12 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.Bestem0r</groupId>
+            <artifactId>BestemorCore</artifactId>
+            <version>96b7ceda14</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -108,6 +114,10 @@
                         <relocation>
                             <pattern>org.bstats.bukkit</pattern>
                             <shadedPattern>me.bestem0r.villagermarket.utils.bstats</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>net.bestemor.core</pattern>
+                            <shadedPattern>net.bestemor.core</shadedPattern>
                         </relocation>
                     </relocations>
                 </configuration>
