--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,11 +1,22 @@
 name: VillagerMarket
 main: net.bestemor.villagermarket.VMPlugin
-version: 1.10.5
+version: 1.10.6
 author: Bestem0r
 description: A plugin made by Bestem0r to create Villager Shops
 api-version: 1.13
 depend: [Vault]
-softdepend: [Essentials, CMI, WorldEdit, WorldGuard, LightEconomy, TheNewEconomy, HellConomy, EasyConomy, PlaceholderAPI, Citizens]
+softdepend:
+  - Essentials
+  - CMI
+  - WorldEdit
+  - WorldGuard
+  - LightEconomy
+  - TheNewEconomy
+  - HellConomy
+  - EasyConomy
+  - PlaceholderAPI
+  - Citizens
+  - Towny
 commands:
   vm:
     description: List all Villager Market commands
@@ -92,3 +103,6 @@ permissions:
   villagermarket.bypass_price:
     default: op
     description: Buypass max price
+  villagermarket.change_size:
+    default: op
+    description: Change shop and storage size
