--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,13 @@
             <url>https://repo.citizensnpcs.co/</url>
         </repository>
 
+        <repository>
+            <id>codemc-repo</id>
+            <url>https://repo.codemc.org/repository/maven-public/</url>
+            <layout>default</layout>
+        </repository>
+
+
     </repositories>
 
     <dependencies>
@@ -121,7 +128,7 @@
         <dependency>
             <groupId>com.github.Bestem0r</groupId>
             <artifactId>BestemorCore</artifactId>
-            <version>afa576d5a9</version>
+            <version>0c58d7cc67</version>
             <scope>compile</scope>
         </dependency>
 
@@ -132,6 +139,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- NBTAPI -->
+        <dependency>
+            <groupId>de.tr7zw</groupId>
+            <artifactId>item-nbt-api</artifactId>
+            <version>2.10.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
